--- a/ansible/playbooks/templates/world-tree.service.j2
+++ b/ansible/playbooks/templates/world-tree.service.j2
@@ -2,8 +2,9 @@
 Description=World Tree Availability Service
 
 [Service]
-ExecStart=/home/{{ ansible_user }}/world-tree/target/release/tree-availability-service --tree-depth 30 -d 0 --tree-history-size 24 --address 0xf7134CE138832c1456F2a91D64621eE90c2bddEa --creation-block 19426949 -r https://eth.llamarpc.com -t 50
+ExecStart=/home/{{ ansible_user }}/world-tree/target/release/world-tree --config /home/{{ ansible_user }}/world-tree/bin/world_tree.toml
 Restart=always
+LimitNOFILE=100000
 
 [Install]
 WantedBy=default.target
