--- a/ansible/playbooks/templates/world_tree.toml.j2
+++ b/ansible/playbooks/templates/world_tree.toml.j2
@@ -16,22 +16,43 @@ address = "0xf7134CE138832c1456F2a91D64621eE90c2bddEa"
 # Creation block of the WorldIdIdentityManager contract
 creation_block = 17636832
 # RPC endpoint
-provider.rpc_endpoint = ""
+provider.rpc_endpoint = "https://mainnet.infura.io/v3/80d38e66616249b2acae775bca86a1c8"
 # Requests per second throttle
 provider.throttle = 150
 # Blockscanner window size; the maximum number of blocks to query at a time
-window_size = 1000
+window_size = 10000
 
+
+# Note that the following bridged trees are identitified with [bridged_trees.<network>]
+# however this could be any unique identifier, e.g. [bridged_trees.0], [bridged_trees.a], etc.
 
 # OP Mainnet
-[[bridged_trees]]
+[bridged_trees.optimism]
 # Address of the BridgedWorldId contract
 address = "0xB3E7771a6e2d7DD8C0666042B7a07C39b938eb7d"
 # Creation block of the BridgedWorldId contract
 creation_block = 109906421
 # RPC endpoint
-provider.rpc_endpoint = ""
+provider.rpc_endpoint = "https://optimism-mainnet.infura.io/v3/80d38e66616249b2acae775bca86a1c8"
 # Requests per second throttle
 provider.throttle = 150
 # Blockscanner window size; the maximum number of blocks to query at a time
-window_size = 1000
+window_size = 10000
+
+
+# Polygon
+[bridged_trees.polygon]
+# Address of the BridgedWorldId contract
+address = "0xa6d85F3b3bE6Ff6DC52C3aaBe9A35d0ce252b79F"
+# Creation block of the BridgedWorldId contract
+creation_block = 47860919
+# RPC endpoint
+provider.rpc_endpoint = "https://polygon-mainnet.infura.io/v3/80d38e66616249b2acae775bca86a1c8"
+# Requests per second throttle
+provider.throttle = 150
+# Blockscanner window size; the maximum number of blocks to query at a time
+window_size = 10000
+
+
+# [telemetry]
+# service_name = "world-tree"
