--- a/ansible/playbooks/templates/world_tree.toml.j2
+++ b/ansible/playbooks/templates/world_tree.toml.j2
@@ -16,7 +16,7 @@ address = "0xf7134CE138832c1456F2a91D64621eE90c2bddEa"
 # Creation block of the WorldIdIdentityManager contract
 creation_block = 17636832
 # RPC endpoint
-provider.rpc_endpoint = "https://mainnet.infura.io/v3/80d38e66616249b2acae775bca86a1c8"
+provider.rpc_endpoint = ""
 # Requests per second throttle
 provider.throttle = 150
 # Blockscanner window size; the maximum number of blocks to query at a time
@@ -33,7 +33,7 @@ address = "0xB3E7771a6e2d7DD8C0666042B7a07C39b938eb7d"
 # Creation block of the BridgedWorldId contract
 creation_block = 109906421
 # RPC endpoint
-provider.rpc_endpoint = "https://optimism-mainnet.infura.io/v3/80d38e66616249b2acae775bca86a1c8"
+provider.rpc_endpoint = ""
 # Requests per second throttle
 provider.throttle = 150
 # Blockscanner window size; the maximum number of blocks to query at a time
@@ -47,7 +47,7 @@ address = "0xa6d85F3b3bE6Ff6DC52C3aaBe9A35d0ce252b79F"
 # Creation block of the BridgedWorldId contract
 creation_block = 47860919
 # RPC endpoint
-provider.rpc_endpoint = "https://polygon-mainnet.infura.io/v3/80d38e66616249b2acae775bca86a1c8"
+provider.rpc_endpoint = ""
 # Requests per second throttle
 provider.throttle = 150
 # Blockscanner window size; the maximum number of blocks to query at a time
